# ITMO-pytaxi

./: .gitignore  pyproject.toml
src/pytaxi/entrypoints/: tui.py
src/pytaxi/tui/: app.py
